--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaPedidos.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaPedidos.xaml
@@ -25,8 +25,8 @@
             <DataGrid x:Name="dgListaModelos" AutoGenerateColumns="False" AlternatingRowBackground="LightGray" CanUserAddRows="False" ItemsSource="{Binding listaPedidos}">
                 <DataGrid.Columns>                    
                     <DataGridTextColumn Header="Id" Binding="{Binding id}" />
-                    <DataGridTextColumn Header="Fecha" Binding="{Binding fecha,StringFormat=d}" />
-                    <DataGridTextColumn Header="Descripcion" Binding="{Binding descripcion}" />      
+                    <DataGridTextColumn Header="Fecha" Binding="{Binding fecha,StringFormat=d}" Width="100" />
+                    <DataGridTextColumn Header="Descripcion" Binding="{Binding descripcion}"  />      
 
                 </DataGrid.Columns>
                 <DataGrid.RowDetailsTemplate >
