--- a/di.proyecto.clase/Vista/Dialogos/DAnyadirEmpleado.xaml
+++ b/di.proyecto.clase/Vista/Dialogos/DAnyadirEmpleado.xaml
@@ -6,7 +6,7 @@
         xmlns:material="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:local="clr-namespace:di.proyecto.clase.Vista.Dialogos"
         mc:Ignorable="d"
-         Title="Añadir producto"  SizeToContent="WidthAndHeight">
+         Title="Añadir empleado"  SizeToContent="WidthAndHeight">
     <Grid Background="DarkGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"></ColumnDefinition>
