--- a/di.proyecto.clase/Vista/ControlesUsuario/UCArbolAverias.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCArbolAverias.xaml
@@ -58,7 +58,7 @@
                 <RowDefinition Height="Auto"/>
 
             </Grid.RowDefinitions>
-            <material:Card  Background="{DynamicResource MaterialDesignPaper}"  Padding="10" Grid.ColumnSpan="5">
+            <material:Card  Background="#1b1b1b"  Padding="10" Grid.ColumnSpan="5">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="500"/>
