--- a/di.proyecto.clase/Vista/ControlesUsuario/UCClienteNuevo.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCClienteNuevo.xaml
@@ -28,7 +28,7 @@
             <RowDefinition Height="Auto"/>
 
         </Grid.RowDefinitions>
-        <material:Card  Background="{DynamicResource MaterialDesignPaper}"  Padding="10" Grid.ColumnSpan="2">
+            <material:Card  Background="#1b1b1b"  Padding="10" Grid.ColumnSpan="2">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="500"/>
