--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaEmpleados.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaEmpleados.xaml
@@ -25,25 +25,25 @@
             <StackPanel  Orientation="Horizontal" Grid.Row="0" Grid.Column="3" Margin="50,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center">
 
                 <Button  x:Name="btnAnyadir" Click="BtnAnyadir_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#b71c1c" Foreground="White" BorderBrush="{x:Null}"
               ToolTip="Añadir" >
                     <material:PackIcon Kind="Plus" Height="24" Width="24" />
                 </Button>
 
                 <Button  x:Name="btnEditar" Margin="10,0,0,0" Click="BtnEditar_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#b71c1c" Foreground="White" BorderBrush="{x:Null}"
               ToolTip="Editar" >
                     <material:PackIcon Kind="Pencil" Height="24" Width="24" />
                 </Button>
 
                 <Button  x:Name="btnBorrar" Margin="10,0,0,0" Click="BtnBorrar_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#b71c1c" Foreground="White" BorderBrush="{x:Null}"
               ToolTip="Borrar" >
                     <material:PackIcon Kind="DeleteEmpty" Height="24" Width="24" />
                 </Button>
 
                 <Button  x:Name="btnReset" Margin="10,0,0,0" Click="BtnReset_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#b71c1c" Foreground="White" BorderBrush="{x:Null}"
               ToolTip="Reset" >
                     <material:PackIcon Kind="Refresh" Height="24" Width="24" />
                 </Button>
@@ -53,8 +53,9 @@
         </Grid>
         <Grid Background="#FF895D5D" >
 
-            <DataGrid x:Name="dgListaEmpleados" AutoGenerateColumns="False"   CanUserAddRows="False" ItemsSource="{Binding listaEmpleados}"  AlternatingRowBackground="#FF494949"
-                      GridLinesVisibility="All" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" Background="#FF522B2B" >
+            <DataGrid x:Name="dgListaEmpleados"  AutoGenerateColumns="False" AlternatingRowBackground="#6d6d6d" CanUserAddRows="False" 
+                       GridLinesVisibility="All" HorizontalGridLinesBrush="White" VerticalGridLinesBrush="White" Background="#424242"   
+                      ItemsSource="{Binding listaEmpleados}">
 
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Nombre" Binding="{Binding nombre}"  />
