--- a/di.proyecto.clase/Vista/ControlesUsuario/UCListaProductos.xaml
+++ b/di.proyecto.clase/Vista/ControlesUsuario/UCListaProductos.xaml
@@ -35,29 +35,27 @@
 
             <StackPanel  Orientation="Horizontal" Grid.Row="0" Grid.Column="3" Margin="50,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center">
 
-               
-
                 <Button  x:Name="btnAnyadir" Click="BtnAnyadir_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Añadir" >
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#FFB71C1C" Foreground="White"
+              ToolTip="Añadir" BorderBrush="{x:Null}" >
                     <material:PackIcon Kind="Plus" Height="24" Width="24" />
                 </Button>
 
                 <Button  x:Name="btnEditar" Margin="10,0,0,0" Click="BtnEditar_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Editar" >
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#FFB71C1C" Foreground="White"
+              ToolTip="Editar" BorderBrush="{x:Null}" >
                     <material:PackIcon Kind="Pencil" Height="24" Width="24" />
                 </Button>
 
                 <Button  x:Name="btnBorrar" Margin="10,0,0,0" Click="BtnBorrar_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Borrar" >
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#FFB71C1C" Foreground="White"
+              ToolTip="Borrar" BorderBrush="{x:Null}" >
                     <material:PackIcon Kind="DeleteEmpty" Height="24" Width="24" />
                 </Button>
 
                 <Button  x:Name="btnReset" Margin="10,0,0,0" Click="BtnReset_Click"
-              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#40080C" Foreground="White"
-              ToolTip="Reset" >
+              Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}" Background="#FFB71C1C" Foreground="White"
+              ToolTip="Reset" BorderBrush="{x:Null}" >
                     <material:PackIcon Kind="Refresh" Height="24" Width="24" />
                 </Button>
 
@@ -66,8 +64,9 @@
         </Grid>
         <Grid Background="#FF895D5D" >
 
-            <DataGrid x:Name="dgListaProductos" AutoGenerateColumns="False"   CanUserAddRows="False" ItemsSource="{Binding listaProductos}"  AlternatingRowBackground="#FF494949"
-                      GridLinesVisibility="All" HorizontalGridLinesBrush="Gray" VerticalGridLinesBrush="Gray" Background="#FF522B2B" >
+            <DataGrid x:Name="dgListaProductos" AutoGenerateColumns="False" AlternatingRowBackground="#6d6d6d" CanUserAddRows="False" 
+                       GridLinesVisibility="All" HorizontalGridLinesBrush="White" VerticalGridLinesBrush="White" Background="#424242"                        
+                      ItemsSource="{Binding listaProductos}"   >
 
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="ID" Binding="{Binding idProducto}"  />
