--- a/di.proyecto.clase/Vista/Dialogos/DEditarProducto.xaml
+++ b/di.proyecto.clase/Vista/Dialogos/DEditarProducto.xaml
@@ -19,7 +19,7 @@
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
-        <material:Card  Background="#40080C" Padding="10" FontSize="20" Grid.ColumnSpan="2">
+        <material:Card  Background="#1b1b1b" Padding="10" FontSize="20" Grid.ColumnSpan="2">
             <TextBlock Text="Editar producto" Foreground="White"
                        HorizontalAlignment="Center" FontWeight="Bold"/>
         </material:Card>
@@ -52,13 +52,13 @@
                  Grid.ColumnSpan="2" Grid.Row="3" Height="60" Margin="10" Style="{StaticResource MaterialDesignFloatingHintTextBox}"></TextBox>
 
         <Button x:Name="btnCancelar" Click="BtnCancelar_Click" Margin="20" IsDefault="True" Content="Cancelar" IsCancel="True"
-                    Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left"  Foreground="White" Background="#40080C">
+                    Grid.Row="4" Grid.Column="0" HorizontalAlignment="Left"  Foreground="White" Background="#b71c1c" BorderBrush="{x:Null}">
 
         </Button>
         <Button x:Name="btnGuardarProducto" Content="Guardar" Click="BtnGuardarProducto_Click"  Margin="20" 
                 
                 IsDefault="True" Grid.Row="5" Grid.Column="1" HorizontalAlignment="Right" IsCancel="True"
-                Foreground="White" Background="#40080C" >
+                Foreground="White" Background="#b71c1c" BorderBrush="{x:Null}" >
         </Button>
     </Grid>
 </Window>
